--- a/themes/cool/analysreport.twig
+++ b/themes/cool/analysreport.twig
@@ -74,6 +74,8 @@
                 <a href="01_colors"><h2>Analys 1</h2></a>
                 <a href="02_load"><h2>Analys 2</h2></a>
                 <a href="03_design_principles"><h2>Analys 3</h2></a>
+                <a href="10_webbplatsdesign"><h2>Analys 10</h2></a>
+                <a href="11_design-och-webbplatser"><h2>Analys 11</h2></a>
             </div>
             <div class="kmom-content">
             {{ content }}
